# pytorch-finufft

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Jenkinsfile  LICENSE  Makefile  README.md  api.html  cookiecutter-config-file.yml  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  sg_execution_times.html
.github/: .stale.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: build.yml  build_ubuntu.yml  build_windows.yml  docs.yml  lint.yml  main.yml  release.yml  test.yml  test_ubuntu.yml
_downloads/55cd874c9c3339d444a806fb4ce70cc6/: convolution_2d.ipynb
_modules/: index.html
_modules/pytorch_finufft/: functional.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/examples/: convolution_2d.rst.txt  index.rst.txt  sg_execution_times.rst.txt
ci/: Jenkinsfile
ci/docker/: Dockerfile-cuda11.8  Dockerfile-cuda12.0
devNBs/: Untitled.ipynb
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  installation.rst  requirements.txt
examples/: README.rst  convolution_2d.html  convolution_2d.py  index.html  sg_execution_times.html
pytorch_finufft/: __init__.py  _err.py  checks.py  functional.py  nn.py
tests/: conftest.py  test_errors.py  test_inverses.py  test_t1_backward.py  test_t1_batch.py  test_t1_forward.py  test_t2_backward.py  test_t2_batch.py  test_t2_forward.py  test_t3_forward.py
tests/test_1d/: test_backward.py  test_backward_1d.py  test_forward_1d.py
tests/test_2d/: test_backward.py  test_backward_2d.py  test_forward.py  test_forward_2d.py
tests/test_3d/: test_backward_3d.py  test_forward.py  test_forward_3d.py
tests/test_backward/: test_backward_1d.py  test_backward_2d.py  test_backward_3d.py
tests/test_example/: test_hello.py
tests/test_forward/: test_forward.py  test_forward_1d.py
