[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch_finufft"
description = "Pytorch bindings for the FINUFFT Library"
readme = "README.md"
authors = [
  {name = "Matthew Meeker", email="mmeeker@flatironinstitute.org"},
  {name = "Michael Eickenberg", email="meickenberg@flatironinstitute.org"},
  {name = "Brian Ward", email="bward@flatironinstitute.org"},
]
license = { text = "MIT" }
dependencies = ["finufft>= 2.1", "torch >= 2", "numpy", "scipy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/flatironinstitute/pytorch-finufft"
homepage = "https://github.com/flatironinstitute/pytorch-finufft"

[project.optional-dependencies]
dev = ["black", "mypy", "isort", "ruff", "pytest", "pytest-cov"]
cuda = ["cufinufft>=2.2.0"]

[tool.setuptools.dynamic]
version = { attr = "pytorch_finufft.__version__" }

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"pytorch_finufft" = ["py.typed"]

[tool.black]
target-version = ["py39"]
line-length = 88
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.9
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
norecursedirs = [
  "hooks",
  "*.egg",
  ".eggs",
  "dist",
  "build",
  "docs",
  ".tox",
  ".git",
  "__pycache__",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "pytorch_finufft"

[coverage.run]
branch = true
